--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,19 +168,14 @@
   padding-top: 100px;
 }
 
-
 .typed{
   height: 220px;
   color:white;
-  font-size: 36px;
+  font-size: 35px;
   line-height: 65px;
   font-family:'Open Sans';
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin-bottom: 15px;
-  text-transform: uppercase;
-} 
-.js-typed{
+  font-weight: 100;
+  .js-typed{
   margin: 0;
   margin-left: 10px;
   padding: 0;
@@ -189,7 +184,6 @@
   font: inherit;
   vertical-align: baseline;
 }
-
   
 .typed-cursor{
   font-family:sans-serif;
@@ -199,4 +193,18 @@
     -moz-animation: blink 0.7s infinite;
     animation: blink 0.7s infinite;
 }
-
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
